syntax = "proto3";

package v1.sandbox;
option go_package="github.com/msqtt/sb-judger/api/pb/v1/sandbox;pb_sb";

import "sandbox/state_enum.proto";

message Output {
	uint32 case_id = 1;
	uint32 cpu_time_usage = 2;
	uint32 real_time_usage = 3;
	uint32 memory_usage = 4;
	State state = 5;
	string out_put = 6;
}

message CollectOutput {
	repeated Output case_outs = 1;
}
